update config file

--- a/config.ini
+++ b/config.ini
@@ -17,6 +17,7 @@ Class_path = G3
 Property_path = H3
 ; cells that contain the XPath of the rules
 Field_XPath = E3
+Field_ID = A3
 
 ; Control Information, keep it empty if it is not available
 ; sheet that contains the CL1 control list
@@ -45,6 +46,34 @@ Class_path = AC2
 Property_path = AD2
 ; cells that contain the XPath of the rules
 Field_XPath = R2
+
+; Control Information, keep it empty if it is not available
+; sheet that contains the CL1 control list
+cl1_sheet_name = 
+; cells that start the control information
+XML_PATH_Fragment = 
+Mapping_Reference = 
+
+
+[eForms 1.0]
+
+; Metadata Information, keep it empty if it is not available
+; sheet that contains the metadata information
+metadata_sheet_name = Metadata
+; cells that contain the metadata information
+Identifier = B3
+Description = B5
+Mapping_Version = B6
+EPO_version = B7
+
+; Rules Information, not allowed to be empty
+; sheet that contains the rules information
+rules_sheet_name = Rules
+; cells that start the rules information
+Class_path = I2
+Property_path = J2
+; cells that contain the XPath of the rules
+Field_XPath = G2
 
 ; Control Information, keep it empty if it is not available
 ; sheet that contains the CL1 control list
