--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ Class_path = G3
 Property_path = H3
 ; cells that contain the XPath of the rules
 Field_XPath = E3
-Field_ID = A3
+; Field_ID = A3
 
 ; Control Information, keep it empty if it is not available
 ; sheet that contains the CL1 control list
@@ -73,7 +73,7 @@ rules_sheet_name = Rules
 Class_path = I2
 Property_path = J2
 ; cells that contain the XPath of the rules
-Field_XPath = G2
+Field_XPath = G2 
 
 ; Control Information, keep it empty if it is not available
 ; sheet that contains the CL1 control list
