--- a/config.ini
+++ b/config.ini
@@ -20,8 +20,10 @@ Field_XPath = E3
 ; Field_ID = A3
 
 ; Control Information, keep it empty if it is not available
-; sheet that contains the CL1 control list
+; sheet that contains the CL1 and CL2 control list
 cl1_sheet_name = CL1 Controlled List of Roles
+cl2_sheet_name = CL2 Controlled List for Organis
+
 ; cells that start the control information
 XML_PATH_Fragment = D3
 Mapping_Reference = B3
@@ -78,6 +80,7 @@ Field_XPath = G2
 ; Control Information, keep it empty if it is not available
 ; sheet that contains the CL1 control list
 cl1_sheet_name = 
+cl2_sheet_name = 
 ; cells that start the control information
 XML_PATH_Fragment = 
 Mapping_Reference = 
